--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/base.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/base.html
@@ -16,32 +16,32 @@
   <meta name="description" content="">
   <meta name="viewport" content="initial-scale=1.0; maximum-scale=1.0; minimum-scale=1.0; user-scalable=no; width=device-width" />
 
-  <link rel="shortcut icon" href="{{site.FAVICON}}"> 
+  <link rel="shortcut icon" href="{{site.FAVICON}}">
 
   <!-- Foundation 5 - Responsive CSS Framework http://foundation.zurb.com/docs/css.html-->
-  <link rel="stylesheet" href="/static/ndf/bower_components/foundation/css/normalize.css"> 
-  <link rel="stylesheet" href="/static/ndf/css/themes/{{site.SITE_NAME|lower}}/styles.css"> 
+  <link rel="stylesheet" href="/static/ndf/bower_components/foundation/css/normalize.css">
+  <link rel="stylesheet" href="/static/ndf/css/themes/{{site.SITE_NAME|lower}}/styles.css">
 
   <!-- Foundation Icon Font http://zurb.com/playground/foundation-icon-fonts-3 -->
-  <link rel="stylesheet" href="/static/ndf/bower_components/foundation-icon-fonts/foundation-icons.css"> 
-  
+  <link rel="stylesheet" href="/static/ndf/bower_components/foundation-icon-fonts/foundation-icons.css">
+
   <!-- font-awesome icons -->
   <link rel="stylesheet" href="/static/ndf/bower_components/font-awesome/css/font-awesome.min.css">
 
   <!-- Modernizr - Browser detection JS http://modernizr.com/ -->
-  <script src="/static/ndf/bower_components/modernizr/modernizr.js"></script> 
+  <script src="/static/ndf/bower_components/modernizr/modernizr.js"></script>
 
   <!-- jQuery -->
-  <script src="/static/ndf/bower_components/jquery/dist/jquery.min.js"></script> 
+  <script src="/static/ndf/bower_components/jquery/dist/jquery.min.js"></script>
   <script src="/static/ndf/bower_components/blockui/jquery.blockUI.js"></script>
-  
+
 
   <!-- Enable HTML5 on old browsers -->
   <!--[if lte IE 8]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 
   <!-- External library stylesheets-->
 {% endcache %}
-  <title>{{ site.SITE_NAME }} - {% block title %} {% endblock %} </title> 
+  <title>{{ site.SITE_NAME }} - {% block title %} {% endblock %} </title>
 
   {% block head %}{% endblock %}
 
@@ -54,7 +54,7 @@
 </head>
 
 <body itemscope itemtype="http://schema.org/Webpage">
-    
+
   {% get_group_object groupid as group_object %}
   {% check_accounts_url request.path as is_ac_url %}
 
@@ -63,20 +63,20 @@
    {% comment %}
    {% get_gstudio_help_sidebar as gst_help_sidebar %}
    {% if gst_help_sidebar and app or app_description%}
-     
-     <div id ="help-canvas-menu" class="">      
+
+     <div id ="help-canvas-menu" class="">
       <a class="help-button btn" href="javascript:void(0);" >
         <div class="help-button-text">
           Help
         </div>
-                
+
       </a>
       <div class="mainContainer">
              {{ app.content_org }}
       </div>
-    </div> 
+    </div>
    {% endif %}
-   {% endcomment %} 
+   {% endcomment %}
   <div class="workspace">
     <div class="off-canvas-wrap" data-offcanvas>
       <div class="inner-wrap">
@@ -97,13 +97,14 @@
           <aside class='medium-{% firstof first_body_column 2 %} columns'>
             <div>
               <header>
-                {% block meta_content %}  {% endblock %} 
+                {% block meta_content %}  {% endblock %}
                 {% block concern_information %} {% endblock %}
               </header>
 
               <!-- Meta content in the (main aside header)-->
               <section>
-                <div style="padding-top:1.3rem;">
+                <!--div style="padding-top:1.3rem;"-->
+                <div>
                   {% block collection_content %}  {% endblock %}
                 </div>
 
@@ -124,27 +125,27 @@
           <article class="medium{% firstof first_body_column|default_if_none:'2'|safe|add:'-12' %} columns">
             <!-- The actual body content -->
             <!-- Url redirection -->
-  
 
-            {% block breadcrumb %} 
+
+            {% block breadcrumb %}
               {% get_breadcrumb request.path %}
             {% endblock breadcrumb %}
 
 
             {% get_group_type request.path request.user as group_type %}
-            
+
             {% if group_type %}
 
-            {% block body_content %} {% endblock %} 
-            {% block extra_content %}  {% endblock %}  
+            {% block body_content %} {% endblock %}
+            {% block extra_content %}  {% endblock %}
             {% endif %}
 
-            <input type="hidden" value="{{newgroup}}"> 
-            <input type="hidden" value="{{groupid}}"> 
+            <input type="hidden" value="{{newgroup}}">
+            <input type="hidden" value="{{groupid}}">
 
           </article>
           {% block data_review_pagination %}  {% endblock %}
-          <!-- End of content section --> 
+          <!-- End of content section -->
         </main>
       </div>
     </div>
@@ -160,34 +161,34 @@
   <!-- END of div to show description on overlay -->
 
   <!-- end of workspace -->
-  
+
   {% cache 360 footer request.LANGUAGE_CODE %} <!-- cache for footer -->
   {% include "ndf/footer.html" with site=site %}
 
   <!-- JS -->
-  <script src="/static/ndf/bower_components/foundation/js/foundation.min.js"></script> 
-  <script src="/static/ndf/js/app.js"></script> 
+  <script src="/static/ndf/bower_components/foundation/js/foundation.min.js"></script>
+  <script src="/static/ndf/js/app.js"></script>
 
   {% endcache %} <!-- end of footer cache -->
 
   <script type="text/javascript">
     // Initialize Foundation CSS
       $(document).foundation();
-      
+
     // Register global ajax start and complete events to show ajax loader when request is in process
       $(document)
         .ajaxStart(function() {
-          $('article').block({ 
+          $('article').block({
             message: '<h4>Processing... Please wait!</h4>',
             centerX: false,
             centerY: false,
-            css: { 
-              border: 'none', 
-              padding: '15px', 
-              color: '#fff !important', 
-              backgroundColor: '#10c1cb !important', 
-              '-webkit-border-radius': '10px', 
-              '-moz-border-radius': '10px', 
+            css: {
+              border: 'none',
+              padding: '15px',
+              color: '#fff !important',
+              backgroundColor: '#10c1cb !important',
+              '-webkit-border-radius': '10px',
+              '-moz-border-radius': '10px',
               opacity: 1.0,
               top: ($(window).height())/2 + 'px', left: '', right: '50px',
               left: $(window).width()/2 + 'px',
@@ -204,20 +205,20 @@
         $("main>aside").toggle();
         $("main>article").toggleClass("large-9 large-12");
       };
-      
+
     // Hide broken image links
       $('img').error(function(){
         $(this).addClass("hide");
         //$(this).attr('src', 'missing.png');
       });
-      
+
     // If on the home group, change group dropdown text to "Groups"
       if($(".group a.active").html() == "home") {
         $(".group a.active").html("Groups").removeClass("active");
         $("#home-group").addClass("active");
       }
 
-    //Functions to automatically add an <i> element icon inside node spans 
+    //Functions to automatically add an <i> element icon inside node spans
 
     /* Attaches user icon with gnow level color for every user link */
     $(".user").prepend(function(){return "<i class='fi-torso'></i>"});
@@ -242,7 +243,7 @@
 
     /* Attaches icon for node type */
     $("aside.page").prepend(function(){return "<i class='fi-page'></i>"});
-    
+
     //set language prefernce
       $(document).on('click', "#savepref", function(){
         var vpref=$("#pref").val();
@@ -277,9 +278,9 @@
         // console.log(modal.getAttribute('caught-data-oid'));
         var oid = modal.getAttribute('caught-data-oid');
         // var url = "/{{group_id}}/ajax/get_resource_by_oid/" + oid;
-        
+
         if (!oid) {return};
-        
+
         $.ajax({
           url: "{% url 'get_resource_by_oid' group_name_tag %}",
           type: 'GET',
@@ -304,7 +305,7 @@
             });
 
           // $('select option[value="{{request.LANGUAGE_CODE}}"]').attr("selected",true);
-                
+
           {% block document_ready %} {% endblock %}
 
         }
@@ -314,8 +315,8 @@
         }
 
 
-        //function defined to inject 
-        (function(win,doc,tag,script){ 
+        //function defined to inject
+        (function(win,doc,tag,script){
           var element = doc.createElement(tag);
           var ftag = doc.getElementsByTagName(tag)[0];
           element.async = 1;
@@ -325,8 +326,8 @@
 
 
       });
-      
-    {% block script %} {% endblock %} 
+
+    {% block script %} {% endblock %}
 
   </script>
 </body>
