--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gnotebook.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gnotebook.html
@@ -2,10 +2,10 @@
 {% load simple_filters %}
 
 <div class="notebook">
-    <div class="row notebook-header collapse">
+    <!--div class="row notebook-header collapse">
         {% get_course_filters group_id title as filter_dict %}
         {% include "ndf/filters.html" with filter_dict=filter_dict %}
-    </div>
+    </div-->
 
     {% comment %}
     <div class="row notebook-header collapse">
@@ -50,7 +50,17 @@
 
     </div>
     {% endcomment %}
-
+    <div class="row notebook-header collapse">
+        <div class="small-12 medium-3 large-3 columns ">
+            <a href="{% url 'page_create_edit' group_name %}?course_event_id={{group_id}}&blog_type=True" class="button expand radius" style="margin: 0em 0em 1em;"><i class="fi-plus"></i>  New Note</a>
+        </div>
+        <div class="small-12 medium-6 large-6 columns ">
+            <h3>Notes</h3><span>55</span>
+        </div>
+        <div class="small-12 medium-3 large-3 columns ">
+            <input type="text" placeholder="Search">
+        </div>
+    </div>
     <div class="row notebook-body">
         <div class="small-12 medium-4 large-3 columns notebook-index">
             <div class="row">
@@ -84,7 +94,7 @@
                         </div>
                     {% endcomment %}
                     <a href="{% url 'course_notebook_tab_note' group_name 'all-notes' each_blog.pk %}" title="{{each_blog.content|safe|striptags|default_if_none:each_blog.name}}">
-                        
+
                     <div class="note {% if notebook_obj.pk == each_blog.pk %} active {% endif %}" id="{{each_blog.pk}}">
                         <div class="note-heading"> {{each_blog.name}} </div>
                         <div class="note-meta">
@@ -145,7 +155,7 @@
                     </a>
                 {% endfor %}
                 </div>
-                    
+
                 {% comment %}
                 <div class="content notes" id="my-drafts"> </div>
                 {% endcomment %}
