--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/ggallerypage.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/ggallerypage.html
@@ -99,7 +99,8 @@
                     </div>
                   {% endif %}
                   {% endif %}
-
+                
+                   {% comment %}
                     <div class="small-12 medium-10 columns gallery-actions" >
                         <div class="create-note">
                          <a href="{% url 'page_create_edit' group_name %}?course_event_id={{group_id}}&blog_type=True" style="margin: 0em 0em 1em;">
@@ -128,6 +129,7 @@
                     </div>
                     
             </div>
+                   {% endcomment %}
             <!-- Files listing div -->
             <div class="gallery-body small-12 columns">
                 <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-5 gallery-body-ul">
